--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.0",
+    "@tanstack/react-table": "^8.16.0",
     "clsx": "^2.1.1",
     "next": "14.2.3",
     "react": "^18",
