--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@tanstack/react-table": "^8.16.0",
     "clsx": "^2.1.1",
+    "i": "^0.3.7",
     "next": "14.2.3",
+    "npm": "^10.8.0",
     "react": "^18",
+    "react-date-range": "^2.0.1",
     "react-dom": "^18",
     "react-icons": "^5.2.0",
     "tailwind-merge": "^2.3.0",
